## Process this file with automake to produce Makefile.in

mimedir = $(datadir)/mime/packages
mime_DATA = gerris.xml

iconsdir = $(datadir)/icons/hicolor/48x48/mimetypes

ICONS = application-gerris.png \
	application-gerris-2D.png \
	application-gerris-3D.png \
	application-gerris-compressed.png

icons_DATA = $(ICONS)

EXTRA_DIST = gerris.xml $(ICONS)
