dist_man_MANS = \
	bat2gts.1 \
	gerris2D.1 \
	gerris3D.1 \
	gfs2gfs.1 \
	gfs2oogl2D.1 \
	gfs2oogl3D.1 \
	gfscompare2D.1 \
	gfscompare3D.1 \
	gfs-config.1 \
	gfs-highlight.1 \
	gfsjoin.1 \
	gfsxref.1 \
	ppm2mpeg.1 \
	ppmcombine.1 \
	rsurfacequery.1 \
	rsurfaceinfo.1 \
	shapes.1 \
	streamanime.1 \
	xyz2rsurface.1 \
	gfsjoin2D.1 \
	gfsjoin3D.1
