## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libcSmRST.la

libcSmRST_la_CFLAGS = $(AM_CFLAGS) -D_FILE_OFFSET_BITS=64
libcSmRST_la_SOURCES = \
		RStarTree.c \
		RStarTree.h \
		RSTInstDel.c \
		RSTInstDel.h \
		RSTJoin.c \
		RSTJoin.h \
		RSTUtil.c \
	        RSTUtil.h \
		RSTInOut.c \
		RSTInOut.h \
	        RSTInterUtil.c \
	        RSTInterUtil.h  \
	        RSTQuery.c \
		RSTQuery.h \
		RSTBase.h
